@@ -80,6 +80,7 @@ convert_lv,
 copy_percent,
 data_lv,
 devices,
+discard,
 lv_attr,
 lv_host,
 lv_kernel_major,
